# clothes_detection_egbis

./: README.md
clothes_detection/: CMakeLists.txt  package.xml
clothes_detection/action/: FindClothes.action
clothes_detection/include/clothes_detection/: ClothesDetector.h  egbis.h
clothes_detection/launch/: clothes_detection.launch
clothes_detection/msg/: Clothes.msg  ClothesArray.msg
clothes_detection/src/: ClothesDetector.cpp  clothes_detection_node.cpp  egbis.cpp
clothes_detection/test_nodes/: clothes_detection_dummy_node.py  find_clothes_client.py
egbis/: CMakeLists.txt  package.xml
egbis/include/egbis/: segment-image.h
egbis/lib/: disjoint-set.cpp  filter.cpp  misc.cpp  segment-graph.cpp  segment-image.cpp
